--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "express-error-handler": "^1.1.0",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "mongodb": "^5.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "router": "^1.3.8"
   }
 }
