--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
